All bugs have been fixed

--- a/results/indus_glyphs_frequency.tex
+++ b/results/indus_glyphs_frequency.tex
@@ -22,22 +22,16 @@
 \hline
 \endlastfoot
 / / & \textIndus{} \\ \hline
-/ / (canonical) & \textIndus{} \\ \hline
 / a/ & \textIndus{} \\ \hline
-/ a/ (canonical) & \textIndus{} \\ \hline
 /./ & \textIndus{} \\ \hline
-/./ (canonical) & \textIndus{} \\ \hline
 /.a/ & \textIndus{} \\ \hline
-/.a/ (canonical) & \textIndus{} \\ \hline
-/a/ & \textIndus{} \\ \hline
-/a/ (canonical) & \textIndus{} \\ \hline
+/a/ & \textIndus{} \\ \hline
 /aa/ & \textIndus{} \\ \hline
-/aa/ (canonical) & \textIndus{} \\ \hline
 /aaa/ & \textIndus{} \\ \hline
 /aan/ & \textIndus{} \\ \hline
 /aaravaa/ & \textIndus{} \\ \hline
 /abaa/ & \textIndus{} \\ \hline
-/ada/ & \textIndus{} \\ \hline
+/ada/ & \textIndus{} \\ \hline
 /adaa/ & \textIndus{} \\ \hline
 /aja/ & \textIndus{} \\ \hline
 /ajaa/ & \textIndus{} \\ \hline
@@ -45,11 +39,11 @@
 /aka/ & \textIndus{} \\ \hline
 /akaa/ & \textIndus{} \\ \hline
 /ala/ & \textIndus{} \\ \hline
-/ama/ & \textIndus{} \\ \hline
+/am/ & \textIndus{} \\ \hline
+/ama/ & \textIndus{} \\ \hline
 /amaa/ & \textIndus{} \\ \hline
 /amataa/ & \textIndus{} \\ \hline
 /an/ & \textIndus{} \\ \hline
-/an/ (canonical) & \textIndus{} \\ \hline
 /ana/ & \textIndus{} \\ \hline
 /anaa/ & \textIndus{} \\ \hline
 /anaara/ & \textIndus{} \\ \hline
@@ -58,10 +52,9 @@
 /annaa/ & \textIndus{} \\ \hline
 /antaraa/ & \textIndus{} \\ \hline
 /apa/ & \textIndus{} \\ \hline
-/ara/ & \textIndus{} \\ \hline
+/ara/ & \textIndus{} \\ \hline
 /araa/ & \textIndus{} \\ \hline
 /as/ & \textIndus{} \\ \hline
-/as/ (canonical) & \textIndus{} \\ \hline
 /asaa/ & \textIndus{} \\ \hline
 /asaas/ & \textIndus{} \\ \hline
 /asas/ & \textIndus{} \\ \hline
@@ -74,21 +67,15 @@
 /avaa/ & \textIndus{} \\ \hline
 /ayaa/ & \textIndus{} \\ \hline
 /b/ & \textIndus{} \\ \hline
-/b/ (canonical) & \textIndus{} \\ \hline
 /ba/ & \textIndus{} \\ \hline
-/ba/ (canonical) & \textIndus{} \\ \hline
 /baba/ & \textIndus{} \\ \hline
 /bada/ & \textIndus{} \\ \hline
 /c/ & \textIndus{} \\ \hline
-/c/ (canonical) & \textIndus{} \\ \hline
 /ca/ & \textIndus{} \\ \hline
-/ca/ (canonical) & \textIndus{} \\ \hline
 /caa/ & \textIndus{} \\ \hline
 /cara/ & \textIndus{} \\ \hline
 /d/ & \textIndus{} \\ \hline
-/d/ (canonical) & \textIndus{} \\ \hline
 /da/ & \textIndus{} \\ \hline
-/da/ (canonical) & \textIndus{} \\ \hline
 /daa/ & \textIndus{} \\ \hline
 /daada/ & \textIndus{} \\ \hline
 /dad/ & \textIndus{} \\ \hline
@@ -97,36 +84,25 @@
 /dak/ & \textIndus{} \\ \hline
 /di/ & \textIndus{} \\ \hline
 /g/ & \textIndus{} \\ \hline
-/g/ (canonical) & \textIndus{} \\ \hline
 /ga/ & \textIndus{} \\ \hline
-/ga/ (canonical) & \textIndus{} \\ \hline
 /i/ & \textIndus{} \\ \hline
-/i/ (canonical) & \textIndus{} \\ \hline
 /ii/ & \textIndus{} \\ \hline
 /iri/ & \textIndus{} \\ \hline
 /isan/ & \textIndus{} \\ \hline
 /j/ & \textIndus{} \\ \hline
-/j/ (canonical) & \textIndus{} \\ \hline
 /ja/ & \textIndus{} \\ \hline
-/ja/ (canonical) & \textIndus{} \\ \hline
 /jara/ & \textIndus{} \\ \hline
 /jas/ & \textIndus{} \\ \hline
 /ji/ & \textIndus{} \\ \hline
 /k/ & \textIndus{} \\ \hline
-/k/ (canonical) & \textIndus{} \\ \hline
 /ka/ & \textIndus{} \\ \hline
-/ka/ (canonical) & \textIndus{} \\ \hline
 /kara/ & \textIndus{} \\ \hline
 /ki/ & \textIndus{} \\ \hline
 /l/ & \textIndus{} \\ \hline
-/l/ (canonical) & \textIndus{} \\ \hline
 /la/ & \textIndus{} \\ \hline
-/la/ (canonical) & \textIndus{} \\ \hline
 /lala/ & \textIndus{} \\ \hline
-/m/ & \textIndus{} \\ \hline
-/m/ (canonical) & \textIndus{} \\ \hline
-/ma/ & \textIndus{} \\ \hline
-/ma/ (canonical) & \textIndus{} \\ \hline
+/m/ & \textIndus{} \\ \hline
+/ma/ & \textIndus{} \\ \hline
 /maa/ & \textIndus{} \\ \hline
 /maan/ & \textIndus{} \\ \hline
 /maha/ & \textIndus{} \\ \hline
@@ -134,33 +110,30 @@
 /mara/ & \textIndus{} \\ \hline
 /mi/ & \textIndus{} \\ \hline
 /n/ & \textIndus{} \\ \hline
-/n/ (canonical) & \textIndus{} \\ \hline
 /na/ & \textIndus{} \\ \hline
-/na/ (canonical) & \textIndus{} \\ \hline
 /naaman/ & \textIndus{} \\ \hline
 /naan/ & \textIndus{} \\ \hline
 /nadan/ & \textIndus{} \\ \hline
 /naktan/ & \textIndus{} \\ \hline
 /namaa/ & \textIndus{} \\ \hline
 /namama/ & \textIndus{} \\ \hline
-/nan/ & \textIndus{} \\ \hline
 /naran/ & \textIndus{} \\ \hline
 /narasan/ & \textIndus{} \\ \hline
 /nasan/ & \textIndus{} \\ \hline
 /navana/ & \textIndus{} \\ \hline
 /navanaa/ & \textIndus{} \\ \hline
+/nmn/ & \textIndus{} \\ \hline
+/nmna/ & \textIndus{} \\ \hline
+/nn/ & \textIndus{} \\ \hline
+/nna/ & \textIndus{} \\ \hline
 /p/ & \textIndus{} \\ \hline
-/p/ (canonical) & \textIndus{} \\ \hline
 /pa/ & \textIndus{} \\ \hline
-/pa/ (canonical) & \textIndus{} \\ \hline
 /paa/ & \textIndus{} \\ \hline
 /pada/ & \textIndus{} \\ \hline
 /papa/ & \textIndus{} \\ \hline
 /para/ & \textIndus{} \\ \hline
 /r/ & \textIndus{} \\ \hline
-/r/ (canonical) & \textIndus{} \\ \hline
 /ra/ & \textIndus{} \\ \hline
-/ra/ (canonical) & \textIndus{} \\ \hline
 /raa/ & \textIndus{} \\ \hline
 /raaa/ & \textIndus{} \\ \hline
 /raja/ & \textIndus{} \\ \hline
@@ -168,42 +141,33 @@
 /rar/ & \textIndus{} \\ \hline
 /rara/ & \textIndus{} \\ \hline
 /ras/ & \textIndus{} \\ \hline
-/ri/ & \textIndus{} \\ \hline
+/ri/ & \textIndus{} \\ \hline
+/rrrra/ & \textIndus{} \\ \hline
 /s/ & \textIndus{} \\ \hline
-/s/ (canonical) & \textIndus{} \\ \hline
 /sa/ & \textIndus{} \\ \hline
-/sa/ (canonical) & \textIndus{} \\ \hline
 /saa/ & \textIndus{} \\ \hline
 /saata/ & \textIndus{} \\ \hline
 /sadas/ & \textIndus{} \\ \hline
 /saksaa/ & \textIndus{} \\ \hline
 /samas/ & \textIndus{} \\ \hline
-/samas/ (canonical) & \textIndus{} \\ \hline
 /san/ & \textIndus{} \\ \hline
 /sara/ & \textIndus{} \\ \hline
 /saras/ & \textIndus{} \\ \hline
 /sas/ & \textIndus{} \\ \hline
 /sava/ & \textIndus{} \\ \hline
+/srsa/ & \textIndus{} \\ \hline
 /t/ & \textIndus{} \\ \hline
-/t/ (canonical) & \textIndus{} \\ \hline
-/ta/ & \textIndus{} \\ \hline
-/ta/ (canonical) & \textIndus{} \\ \hline
+/ta/ & \textIndus{} \\ \hline
 /taaa/ & \textIndus{} \\ \hline
 /taas/ & \textIndus{} \\ \hline
 /tara/ & \textIndus{} \\ \hline
 /tata/ & \textIndus{} \\ \hline
-/tata/ (canonical) & \textIndus{} \\ \hline
 /u/ & \textIndus{} \\ \hline
-/u/ (canonical) & \textIndus{} \\ \hline
 /v/ & \textIndus{} \\ \hline
-/v/ (canonical) & \textIndus{} \\ \hline
 /va/ & \textIndus{} \\ \hline
-/va/ (canonical) & \textIndus{} \\ \hline
 /vava/ & \textIndus{} \\ \hline
 /y/ & \textIndus{} \\ \hline
-/y/ (canonical) & \textIndus{} \\ \hline
 /ya/ & \textIndus{} \\ \hline
-/ya/ (canonical) & \textIndus{} \\ \hline
 /yaa/ & \textIndus{} \\ \hline
 /yaaa/ & \textIndus{} \\ \hline
 \end{longtable}
